# skillplan

./: .env.example  .gitignore  Dockerfile.dev  Dockerfile.web  LICENSE.md  Makefile  README.md  docker-compose.yml  docker_startup.sh  heroku.yml  manage.py  package.json  pegasus-config.yaml  pyproject.toml
.github/workflows/: tests.yml
api-client/: runtime.ts
api-client/apis/: ApiApi.ts  DashboardApi.ts  PegasusApi.ts
api-client/models/: AggregateEmployeeData.ts  CustomUser.ts  DepartmentEnum.ts  Employee.ts  JWT.ts  Login.ts  LoginResponse.ts  OtpRequest.ts  PaginatedEmployeeList.ts  PasswordChange.ts  PatchedCustomUser.ts  PatchedEmployee.ts  Register.ts  RestAuthDetail.ts  TokenRefresh.ts  TokenVerify.ts  UserSignupStats.ts
apps/chat/: tasks.py  utils.py
apps/ecommerce/: webhooks.py
apps/subscriptions/: helpers.py  webhooks.py
apps/subscriptions/views/: checkout_views.py  views.py
apps/users/migrations/: 0002_alter_customuser_options_and_more.py
apps/web/: meta.py
skillplan/: asgi.py  celery.py  settings.py  settings_production.py  urls.py  wsgi.py
static/css/: site-tailwind.css
static/js/: app-bundle.js  chat-bundle.js  pegasus-bundle.js  react-object-lifecycle-bundle.js  site-bundle.js  vue-object-lifecycle-bundle.js
templates/web/components/: app_nav_menu_items.html
