[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".git",
    ".ruff_cache",
    "node_modules",
    "migrations",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
fixable = [
    "ALL",
]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools]
py-modules = []

[project]
name = "skillplan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "channels",
    "channels_redis",
    "docutils",
    "Django",
    "django-allauth[socialaccount,mfa]",
    "django-otp", # this is required for the allauth two-factor migration, but can be removed after that
    "django-waffle",
    "django-environ",
    "djangorestframework",
    "djangorestframework-api-key",
    "djangorestframework-simplejwt",
    "dj-rest-auth",
    "django-cors-headers",
    "django-health-check",
    "drf-spectacular",
    "stripe",
    "dj-stripe",
    "django-anymail[mailgun]",
    "django-hijack",
    "django-storages",
    "celery-progress",
    "celery",
    "celery[redis]",
    "django-celery-beat",
    "markdown",
    "openai",
    "psycopg2-binary",
    "sentry-sdk",
    "wagtail",
    "whitenoise[brotli]",
]

[dependency-groups]
dev = [
    "channels[daphne]",
    "django-debug-toolbar",
    "pre-commit",
    "ruff",
]
prod = [
    "gunicorn",
    "uvicorn[standard]",
]
